--- a/testimonials-grid-section-main/styles/styles.css
+++ b/testimonials-grid-section-main/styles/styles.css
@@ -5,6 +5,26 @@
     font-size: 30px;
     box-sizing: border-box;
   }
+
+  :root{
+
+    /* font-size */
+
+    --small: 14px;
+    --normal: 20px;
+    --large: 30px;
+
+    /*typography colors */
+    
+
+    /* colors */
+
+    --Moderate-violet: hsl(263, 55%, 52%);
+    --Very-dark-grayish-blue: hsl(217, 19%, 35%);
+    --Very-dark-blackish-blue: hsl(219, 29%, 14%);
+    --White: hsl(0, 0%, 100%);
+
+  }
   
   #grid{
     display: grid;
@@ -13,17 +33,36 @@
     grid-gap: 20px;
     
   }
+
+  .main {
+    max-width: 80%;
+    margin: 100px auto;
+  }
   
   section {
-    height: 100vh;
-    border: 10px solid;
+    height: 90vh;
     
   }
+
+.mention-person-details2{
+  font-size: 20px;
+}
+.persons-name p{
+  
+  padding-left: 10px;
+  font-size: var(--small)
+}
+
+.persons-name strong {
+  font-size: var(--normal);
+}
   
 .mention-person-img img{
   border-radius: 100px;
   width: 45px
 }
+
+
 
  .box-content {
    display: flex;
@@ -32,33 +71,34 @@
   
   .box {
     background-color: #ccc;
-    border: 4px solid;
     padding: 20px;
+    border-radius: 10px;
   }
   
   .item1 {
+    
     grid-column: 1/ 3;
-    grid-row: 1/ 4;
+    grid-row: 1/ 3;
   }
   
   .item2 {
     grid-column: 3 / 4;
-    grid-row: 1 / 4;
+    grid-row: 1 / 3;
   }
   
   .item3 {
     grid-column: 4 / 5;
-    grid-row: 1 /8;
+    grid-row: 1 /4;
   }
   
   .item4 {
     grid-column: 1/ 2;
-    grid-row: 4/ 8;
+    grid-row: 3/ 4;
     
   }
   
   .item5 {
     grid-column: 2/ 4;
-    grid-row: 4/ 8;
+    grid-row: 3/ 4;
     
   }
